Updated for Ladder Season 1.

--- a/index.html
+++ b/index.html
@@ -351,11 +351,13 @@
 					<td>
 						<label for="rwSet">Choose a RuneWord Set:</label>
 						<select id="rwSet">
-							<option value="lod">Diablo II: Lord of Destruction</option>
+							<option value="d2r24">Diablo II: Ressurected (Path 2.4)</option>
 							<option value="d2r">Diablo II: Resurrected</option>
+							<option value="lod">Diablo II: Lord of Destruction</option>
 							<option value="pd2S1">Project Diablo II: Season 1</option>
 							<option value="pd2S2">Project Diablo II: Season 2</option>
 							<option value="pd2S3">Project Diablo II: Season 3</option>
+							<option value="pd2S4">Project Diablo II: Season 4</option>
 						</select>
 					</td>
 				</tr>
